<resources>
    <string name="app_name">1note</string>
    <string name="title_activity_fullscreen_image">FullscreenImageActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="title">Заголовок</string>
    <string name="text">Начните ввод</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="addnewnote">Добавить новую заметку</string>
    <string name="allFolders">Все папки</string>
    <string name="folders">Папки</string>
    <string name="allNotes">Все заметки</string>
    <string name="notes">Заметки</string>
    <string name="all">Все</string>
    <string name="saveAudio">Сохранить голосовую запись</string>


    <string name="createFolder">Создать папку</string>
    <string name="readyNameFolders">Готовые имена для названия папки</string>
    <string name="colorsFolder">Цвета для папки</string>
    <string name="renameFolder">Изменить название папки</string>
    <string name="createTag">Создать метку</string>
    <string name="cancel">Отмена</string>
    <string name="audioRecordRunning">Идет запись аудио...</string>
    <string name="write_folder_name">Введите название папки</string>
    <string name="favorite_folder">Избранная папка</string>
    <string name="useFolderSettings">Использовать папки?</string>
    <string name="settingTheFolder">Настроить папки</string>
    <string name="useABehindBlurQ">Использовать размытие за окнами?</string>
    <string name="useABackgroundBlurQ">Использовать размытие фона?</string>
    <string name="search">Поиск:</string>
</resources>