<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="20dp">

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/cancel_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="311dp"
        android:text="@string/cancel"
        android:textColor="@color/white"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/materialTextView">

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/mic_image"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_margin="30dp"
            android:background="@drawable/round_background_white"
            android:src="@drawable/mic" />

        <com.google.android.material.textview.MaterialTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:paddingBottom="10dp"
            android:text="@string/audioRecordRunning"
            android:textColor="@color/white"
            android:textSize="15sp" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/recordTime"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:paddingBottom="10dp"
            android:text="00:00"
            android:textColor="@color/white"
            android:textSize="15sp" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/saveAudioButton"
            android:layout_width="300dp"
            android:layout_height="50dp"
            android:text="@string/saveAudio" />
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>