<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:id="@+id/layouttocolor"
    android:background="@color/background131313"
    android:layout_height="match_parent">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:title="@string/addnewnote"
        app:titleCentered="true"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">
    </com.google.android.material.appbar.MaterialToolbar>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/relativeLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar">

        <ImageView
            android:id="@+id/camera_view"
            android:layout_width="300px"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/image_view"
            android:layout_width="300px"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toStartOf="@+id/camera_view"
            app:layout_constraintHorizontal_bias="0.808"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/paintImage"
            android:layout_width="300px"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <EditText
        android:id="@+id/titleEdit"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:ems="10"
        android:background="@android:color/transparent"
        android:hint="@string/title"
        android:inputType="textPersonName"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@id/toolbar"
        app:layout_constraintTop_toBottomOf="@+id/relativeLayout2" />

    <EditText
        android:id="@+id/textEdit"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@android:color/transparent"
        android:gravity="top"
        android:hint="@string/text"
        android:inputType="textMultiLine"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/coordinatorLayout2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/titleEdit" />

    <LinearLayout
        android:id="@+id/colorpickerlayout"
        android:visibility="invisible"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="@+id/textEdit"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">
        <androidx.cardview.widget.CardView
            android:id="@+id/colorpickercardView"
            android:layout_width="100dp"
            android:layout_height="50dp"/>
        <NumberPicker
            android:id="@+id/colorpicker"
            android:layout_width="100dp"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:id="@+id/coordinatorLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <com.google.android.material.bottomappbar.BottomAppBar
            android:id="@+id/bottom_app_bar"
            app:contentInsetStart="0dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:backgroundTint="@color/black">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal">

                <ImageButton
                    android:id="@+id/image_btn"
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:background="?attr/selectableItemBackgroundBorderless"
                    android:src="@drawable/image_camera_btn" />

                <ImageButton
                    android:id="@+id/camera_btn"
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:background="?attr/selectableItemBackgroundBorderless"
                    android:src="@drawable/camera_btn" />

                <ImageButton
                    android:id="@+id/imageButtonVoice"
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:background="?attr/selectableItemBackgroundBorderless"
                    android:src="@drawable/ic_baseline_keyboard_voice_24" />

                <ImageButton
                    android:id="@+id/imageButtonDraw"
                    android:layout_width="57dp"
                    android:layout_height="60dp"
                    android:background="?attr/selectableItemBackgroundBorderless"
                    android:src="@drawable/color_lens_btn" />
                <ImageButton
                    android:id="@+id/cardcolorpicker"
                    android:layout_width="57dp"
                    android:layout_height="60dp"
                    android:background="?attr/selectableItemBackgroundBorderless"
                    android:src="@drawable/format_paint48px" />
            </LinearLayout>
        </com.google.android.material.bottomappbar.BottomAppBar>

    </androidx.coordinatorlayout.widget.CoordinatorLayout>



</androidx.constraintlayout.widget.ConstraintLayout>